# DLFDKit-code-samples

./: README.md
CCL_Getting_Started/: CMakeLists.txt  README.md  sample.json
CCL_Getting_Started/src/: CMakeLists.txt  sycl_allreduce_cpp_test.cpp  sycl_allreduce_test.cpp
DNNL_CNN_INFERENCE_FP32/: CMakeLists.txt  README.md  sample.json
DNNL_Getting_Started/: CMakeLists.txt  README.md  sample.json
DNNL_SYCL_InterOp/: CMakeLists.txt  README.md  sample.json
oneCCL_Getting_Started/: CMakeLists.txt  README.md  sample.json
oneCCL_Getting_Started/include/: sycl_base.hpp
oneDNN_CNN_INFERENCE_FP32/: README.md  q  sample.json
oneDNN_Getting_Started/: README.md  sample.json
oneDNN_SYCL_InterOp/: README.md  sample.json
